I need a valid google studio api

--- a/STUDENT_HANDBOOK_RAG.ipynb
+++ b/STUDENT_HANDBOOK_RAG.ipynb
@@ -145,7 +145,7 @@
         "import chromadb\n",
         "\n",
         "# Get api key here: https://aistudio.google.com/\n",
-        "GOOGLE_API_KEY = \"AIzaSyBkXMDVA8_NohlNHsUh1rGtMhjkzU2Y60Y\"\n",
+        "GOOGLE_API_KEY = \"\"\n",
         "genai.configure(api_key=GOOGLE_API_KEY)\n",
         "\n",
         "print(\"Setup complete\")"
